--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,16 @@ dependencies:
     sdk: flutter
   splashscreen:
   validate: ^1.7.0
-
+  http: ^0.12.0+1
+  sqflite: ^0.12.2+1
+  path_provider: ^0.4.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_calendar: ^0.0.1
+  rxdart: 0.16.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +49,8 @@ flutter:
   uses-material-design: true
   assets:   
     - assets/
+    - locale/i18n_en.json
+    - locale/i18n_hi.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
