--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_calendar: ^0.0.1
-  rxdart: 0.16.0
+  rxdart: ^0.18.1
+  flutter_range_slider: ^0.0.4
   flutter_localizations:
     sdk: flutter
 
