--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_calendar: ^0.0.1
   rxdart: ^0.18.1
   flutter_range_slider: ^0.0.4
+  charts_flutter: ^0.6.0
   carousel_slider: ^1.3.0
   flutter_localizations:
     sdk: flutter
