--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,8 @@ dependencies:
   splashscreen:
   validate: ^1.7.0
   http: ^0.12.0+1
-  sqflite: ^0.12.2+1
-  path_provider: ^0.4.1
+  sqflite: ^1.1.0 #^0.12.2+1
+  path_provider: ^0.5.0+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -32,10 +32,21 @@ dependencies:
   flutter_range_slider: ^0.0.4
   charts_flutter: ^0.6.0
   carousel_slider: ^1.3.0
+  image: ^2.0.7
+  cached_network_image: ^0.7.0
+  json_annotation: ^2.0.0
+  flutter_cache_manager: ^0.3.2
+  date_format: ^1.0.6
+  timeago: ^2.0.14
+  dio: 2.1.2
+  flutter_list_drag_and_drop: ^0.1.6
+  image_picker: ^0.5.3+1
   flutter_localizations:
     sdk: flutter
 
 dev_dependencies:
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
   flutter_test:
     sdk: flutter
 
