--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+20
+version: 1.0.0+22
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -22,6 +22,8 @@ dependencies:
   splashscreen:
   validate: ^1.7.0
   http: ^0.12.0+1
+  flutter_statusbarcolor: ^0.2.2
+  flutter_custom_clippers: ^1.1.0
   sqflite: ^1.1.0 #^0.12.2+1
   path_provider: ^0.5.0+1
   # The following adds the Cupertino Icons font to your application.
