--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   splashscreen:
   validate: ^1.7.0
   http: ^0.12.0+1
+  flutter_progress_button: '^0.6.2'
+  keyboard_visibility: ^0.5.2
   flutter_statusbarcolor: ^0.2.2
   flutter_custom_clippers: ^1.1.0
   sqflite: ^1.1.0 #^0.12.2+1
